Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30871

ASSERT failure in QShortcutMap::find: "New sequence to find identical to previous"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • 5.0.2
    • None
    • Mac OS X
    • Change-Id: Idd451fb793bd07124a96d75ed7b936f7ff584f28

      Following example asserts on Mac, when using Spanish ISO keyboard layout and trying to type "{" character.

      class MainWindow : public QWidget
      {
          Q_OBJECT
      public:
          explicit MainWindow(QWidget *parent = 0);
      protected:
      
      };
      
      MainWindow::MainWindow(QWidget *parent) :
          QWidget(parent)
      {
          QVBoxLayout *layout = new QVBoxLayout(this);
      
          QPushButton *fiveButton = new QPushButton("5");
      
          QTextEdit *edit = new QTextEdit;
      
          layout->addWidget(fiveButton);
          layout->addWidget(edit);
      
          fiveButton->setShortcut(QKeySequence(Qt::Key_5));
      }
      
      int main(int argc, char *argv[])
      {
          QApplication a(argc, argv);
      
          MainWindow w;
          w.show();
      
          return a.exec();
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            paeglis Gatis Paeglis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes